--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -1,19 +1,35 @@
+# config/packages/cache.yaml
 framework:
     cache:
-        # Unique name of your app: used to compute stable namespaces for cache keys.
-        #prefix_seed: your_vendor_name/app_name
+        default_memcached_provider: 'memcached://localhost'
 
-        # The "app" cache stores to the filesystem by default.
-        # The data in this cache should persist between deploys.
-        # Other options include:
+        pools:
+            # creates a "custom_thing.cache" service
+            # autowireable via "CacheInterface $customThingCache"
+            # uses the "app" cache configuration
+            custom_thing.cache:
+                adapter: cache.app
+                tags: tag_pool
+            tag_pool:
+                adapter: cache.adapter.apcu
 
-        # Redis
-        #app: cache.adapter.redis
-        #default_redis_provider: redis://localhost
+            # creates a "my_cache_pool" service
+            # autowireable via "CacheInterface $myCachePool"
+            my_cache_pool:
+                adapter: cache.adapter.filesystem
 
-        # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
-        #app: cache.adapter.apcu
+            # uses the default_memcached_provider from above
+            acme.cache:
+                adapter: cache.adapter.memcached
+                tags: true
 
-        # Namespaced pools use the above "app" backend by default
-        #pools:
-            #my.dedicated.cache: null
+            # control adapter's configuration
+            foobar.cache:
+                adapter: cache.adapter.memcached
+                provider: 'memcached://user:password@example.com'
+
+            # uses the "foobar.cache" pool as its backend but controls
+            # the lifetime and (like all pools) has a separate cache namespace
+            short_cache:
+                adapter: foobar.cache
+                default_lifetime: 60
